02-app-from-yaml-manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: meetup-01
  labels:
    name: meetup-01
