02-app-from-yaml-manifests/ingress.yaml
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: sample-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
    # change host as per your ingress
    - host:
      http:
        paths:
        - path: /meetup-app-2
          pathType: Prefix
          backend:
            service:
              name: sample-service
              port:
                number: 80
